backend/deployment-nhl_app_be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nhl-app-be-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: nhl-app-be
        image: karamel32/nhl_app_be:0.0.30
        imagePullPolicy: Always 
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 300m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 500Mi
      volumes:
      - name: flask-pvc
        persistentVolumeClaim:
          claimName: flask-pvc
