backend/svc-nhl_app_be.yaml
apiVersion: v1
kind: Service
metadata:
  name: nhl-app-be-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
      app: backend
  type: ClusterIP
