backend/ing-svc-pvc-nhl_app_be.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nhl-app-be-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /nhl-app-be
        pathType: Prefix
        backend:
          service:
            name: nhl-app-be-svc
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nhl-app-be-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
      app: backend
  type: ClusterIP
