backend/ingress-nhl_app_be.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nhl-app-be-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /nhl-app-be
        pathType: Prefix
        backend:
          service:
            name: nhl-app-be-svc
            port:
              number: 80
