backend/nhl_app_be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nhl-app-be-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: nhl-app-be
        image: karamel32/nhl_app_be:0.0.10
        imagePullPolicy: Always 
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: nhl-app-be-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
      app: backend
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nhl-app-be-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /nhl-app-be
        pathType: Prefix
        backend:
          service:
            name: nhl-app-be-svc
            port:
              number: 80
